--- a/src/app/components/services/front-end-development/development.component.html
+++ b/src/app/components/services/front-end-development/development.component.html
@@ -28,7 +28,7 @@
       <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-7">
-          <h1>UI DEVELOPMENT</h1>
+          <h1>UI Development</h1>
           <p>It’ll aid us to understand your objectives. We need to get to the bottom
             of who you are, what you stand for and who you stand besid
           </p>
@@ -44,7 +44,7 @@
           <h3><img src="/assets/images/services/ui-dev/icon-2.svg" /><span>Platform</span></h3>
         </div>
         <div class="col-md-2">
-          <h3><img src="/assets/images/services/ui-dev/icon-3.svg" /><span>Framwork</span></h3>
+          <h3><img src="/assets/images/services/ui-dev/icon-3.svg" /><span>Framework</span></h3>
         </div>
         <div class="col-md-2">
           <h3><img src="/assets/images/services/ui-dev/icon-4.svg" /><span>Manage</span></h3>
