--- a/src/app/components/services/back-end-development/back-end-development.component.html
+++ b/src/app/components/services/back-end-development/back-end-development.component.html
@@ -41,7 +41,7 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-7">
-        <h1>END TO END DEVELOPMENT</h1>
+        <h1>End-to-End Development</h1>
         <p>It’ll aid us to understand your objectives. We need to get to the bottom
           of who you are, what you stand for and who you stand besid</p>
       </div>
