--- a/src/app/components/services/usability-testing/usability-testing.component.html
+++ b/src/app/components/services/usability-testing/usability-testing.component.html
@@ -74,7 +74,7 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-7">
-        <h1>USABILITY TESTING</h1>
+        <h1>Usability Testing</h1>
         <p>It’ll aid us to understand your objectives. We need to get to the bottom
           of who you are, what you stand for and who you stand besid</p>
       </div>
