--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -22,8 +22,11 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3"></div>
-        <div class="col-md-7">
-          <h1>USER EXPERIENCE</h1>
+        <div class="col-md-7">      
+            <h1>User Experience</h1>
+            <div class="step-image">
+                <img src="/assets/images/sample/line.svg" />
+              </div>    
           <p>Unravelling solutions for business problems in alignment with end-user expectations.
               Creating functional, Usable, Pleasurable Unique and Value for digital products
           </p>
@@ -39,7 +42,7 @@
           <h3><img src="/assets/images/services/user-experience/icon-2.svg" /><span>Platform</span></h3>
         </div>
         <div class="col-md-2">
-          <h3><img src="/assets/images/services/user-experience/icon-3.svg" /><span>Framwork</span></h3>
+          <h3><img src="/assets/images/services/user-experience/icon-3.svg" /><span>Framework</span></h3>
         </div>
         <div class="col-md-2">
           <h3><img src="/assets/images/services/user-experience/icon-4.svg" /><span>Manage</span></h3>
