--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -54,7 +54,7 @@
       <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-7">
-          <h1>INTERFACE DESIGN</h1>
+          <h1>Interface Design</h1>
           <p>It’ll aid us to understand your objectives. We need to get to the bottom
             of who you are, what you stand for and who you stand besid</p>
         </div>
