--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -19,7 +19,7 @@
             text-align: left;
             margin-top: -25px;
             background-image: url('/assets/images/sample/line.svg');
-            width: 41%;
+            width: 50%;
             height: 8px;
             img{
                 width: 0%;
@@ -219,8 +219,8 @@
             }
             .step-image{
                 margin-top: 6px;
-                // width: 50%;
-                // height: 8px;
+                width: 40%;
+                height: 8px;
                 img{
                     width: 0%;
                     height: auto;
