--- a/src/app/components/services/usability-testing/usability-testing.component.html
+++ b/src/app/components/services/usability-testing/usability-testing.component.html
@@ -73,12 +73,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md-7">
-        <h1>USABILITY TESTING</h1>
+      <div class="col-md-6">
+        <h1>Usability Testing</h1>
         <p>It’ll aid us to understand your objectives. We need to get to the bottom
           of who you are, what you stand for and who you stand besid</p>
       </div>
-      <div class="col-md-2"></div>
+      <div class="col-md-3"></div>
     </div>
     <div class="row">
       <!-- <div class="col-md-1"></div> -->
