--- a/src/app/components/services/back-end-development/back-end-development.component.html
+++ b/src/app/components/services/back-end-development/back-end-development.component.html
@@ -40,12 +40,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md-7">
-        <h1>END TO END DEVELOPMENT</h1>
+      <div class="col-md-6">
+        <h1>End To End Development</h1>
         <p>It’ll aid us to understand your objectives. We need to get to the bottom
           of who you are, what you stand for and who you stand besid</p>
       </div>
-      <div class="col-md-2"></div>
+      <div class="col-md-3"></div>
     </div>
     <div class="row">
       <!-- <div class="col-md-1"></div> -->
