--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -22,13 +22,13 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3"></div>
-        <div class="col-md-7">
-          <h1>USER EXPERIENCE</h1>
+        <div class="col-md-6">
+          <h1>User Experience</h1>
           <p>Unravelling solutions for business problems in alignment with end-user expectations.
               Creating functional, Usable, Pleasurable Unique and Value for digital products
           </p>
         </div>
-        <div class="col-md-2"></div>
+        <div class="col-md-3"></div>
       </div>
       <div class="row">
         <div class="col-md-1"></div>
