--- a/src/app/components/services/back-end-development/back-end-development.component.scss
+++ b/src/app/components/services/back-end-development/back-end-development.component.scss
@@ -100,10 +100,18 @@ p{
         text-align: center;
         font-family: 'Noto Serif SC', serif;
     }
+    .step-image{
+        background-image: url('/assets/images/services/end-to-end/line-4.svg');
+        width: 40%;
+        height: 5px;
+        margin-left: 350px;
+        margin-top: -12px;
+    }
     p{
         font-size: 14px;
         font-weight: 300;
         text-align: center;
+        margin-top: 20px;
     }
     h3{
         margin-top: 150px;
@@ -234,6 +242,12 @@ p{
             font-weight: 400;
             text-align: left;
             font-family: 'Noto Serif SC', serif;
+        }
+        .step-image{
+            width: 57%;
+            height: 4px;
+            margin-left: 0px;
+            margin-top: -15px;
         }
         p{
             font-size: 13px;
