--- a/src/app/components/services/usability-testing/usability-testing.component.scss
+++ b/src/app/components/services/usability-testing/usability-testing.component.scss
@@ -45,10 +45,18 @@ p{
         text-align: center;
         font-family: 'Noto Serif SC', serif;
     }
+    .step-image{
+        background-image: url('/assets/images/services/usability-testing/line-5.svg');
+        width: 60%;
+        height: 5px;
+        margin-left: 115px;
+        margin-top: -20px;
+    }
     p{
         font-size: 14px;
         font-weight: 300;
         text-align: center;
+        margin-top: 20px;
     }
     h3{
         margin-top: 150px;
@@ -266,6 +274,12 @@ p{
             font-weight: 400;
             text-align: left;
             font-family: 'Noto Serif SC', serif;
+        }
+        .step-image{
+            width: 60%;
+            height: 4px;
+            margin-left: 20px;
+            margin-top: -15px;
         }
         p{
             font-size: 13px;
