--- a/src/app/components/services/back-end-development/back-end-development.component.html
+++ b/src/app/components/services/back-end-development/back-end-development.component.html
@@ -39,9 +39,14 @@
 <section class="end">
   <div class="container">
     <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-7">
+      <div class="col-md-12">
         <h1>End-to-End Development</h1>
+        <div class="step-image"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
         <p>It’ll aid us to understand your objectives. We need to get to the bottom
           of who you are, what you stand for and who you stand besid</p>
       </div>
