--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -22,10 +22,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3"></div>
-        <div class="col-md-7">      
+        <div class="col-md-6">      
             <h1>User Experience</h1>
             <div class="step-image">
-                <img src="/assets/images/sample/line.svg" />
+                <!-- <img src="/assets/images/services/user-experience/line-1.svg" /> -->
               </div>    
           <p>Unravelling solutions for business problems in alignment with end-user expectations.
               Creating functional, Usable, Pleasurable Unique and Value for digital products
