--- a/src/app/components/services/ux-consulting/ux-consulting.component.scss
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.scss
@@ -50,6 +50,14 @@ p{
         font-size: 14px;
         font-weight: 300;
         text-align: center;
+        margin-top: 20px;
+    }
+    .step-image{
+        background-image: url('/assets/images/services/user-experience/line-1.svg');
+        width: 60%;
+        height: 5px;
+        margin-left: 115px;
+        margin-top: -20px;
     }
     h3{
         margin-top: 150px;
@@ -191,6 +199,12 @@ p{
             font-weight: 400;
             text-align: left;
             font-family: 'Noto Serif SC', serif;
+        }
+        .step-image{
+            width: 60%;
+            height: 4px;
+            margin-left: 20px;
+            margin-top: -15px;
         }
         p{
             font-size: 13px;
