--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -53,8 +53,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3"></div>
-        <div class="col-md-7">
+        <div class="col-md-6">
           <h1>Interface Design</h1>
+          <div class="step-image"></div>
           <p>It’ll aid us to understand your objectives. We need to get to the bottom
             of who you are, what you stand for and who you stand besid</p>
         </div>
