--- a/src/app/components/services/visual-design/visual-design.component.scss
+++ b/src/app/components/services/visual-design/visual-design.component.scss
@@ -28,10 +28,18 @@ h5{
         text-align: center;
         font-family: 'Noto Serif SC', serif;
     }
+    .step-image{
+        background-image: url('/assets/images/services/interface-design/line-2.svg');
+        width: 60%;
+        height: 5px;
+        margin-left: 115px;
+        margin-top: -20px;
+    }
     p{
         font-size: 14px;
         font-weight: 300;
         text-align: center;
+        margin-top: 20px;
     }
     .list-icons{
         margin-top: 150px;
@@ -358,6 +366,12 @@ h5{
             font-weight: 400;
             text-align: left;
             font-family: 'Noto Serif SC', serif;
+        }
+        .step-image{
+            width: 60%;
+            height: 4px;
+            margin-left: 20px;
+            margin-top: -15px;
         }
         p{
             font-size: 13px;
