case studies changes

--- a/src/app/components/projects/event-management/event-management.component.html
+++ b/src/app/components/projects/event-management/event-management.component.html
@@ -53,6 +53,137 @@
       </div>
       </div>
     </div>
+    <div class="existing">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-5">
+            <h5>Existing Business</h5>
+            <p>Business segments like Hotel Management, Wedding Halls, Decorators, Photographers, Make-up Artists, Fashion Designers lean more and more into social media (Instagram & Facebook) to showcase their professional services.</p>
+          </div>
+          <div class="col-md-1"></div>
+          <div class="col-md-6">
+            <div class="row">
+            <div class="col-md-6">
+            <div class="shadow p-3 mb-5 bg-white rounded">
+              <div class="row">
+                <div class="col-md-8">
+                  <h3>25 %</h3>
+                  <h4>Client Retention</h4>
+                </div>
+                <div class="col-md-2">
+                  <img src="/assets/images/projects/event-management/img-1.svg" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="shadow p-3 mb-5 bg-white rounded">
+              <div class="row">
+                <div class="col-md-8">
+              <h3>25 %</h3>
+              <h4>Web Communication</h4>
+            </div>
+            <div class="col-md-2">
+              <img src="/assets/images/projects/event-management/img-2.svg" />
+            </div>
+            </div>
+          </div>
+          </div>
+          <div class="col-md-6">
+            <div class="shadow p-3 mb-5 bg-white rounded">
+              <div class="row">
+                <div class="col-md-8">
+              <h3>25 %</h3>
+              <h4>New Customer</h4>
+            </div>
+            <div class="col-md-2">
+              <img src="/assets/images/projects/event-management/img-3.svg" />
+            </div>
+            </div>
+            </div>
+          </div>
+        </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="layout5">
+      <div class="container">
+      <div class="row">
+          <div class="col-md-6">
+             <h2> <img src="/assets/images/projects/event-management/em8.png" />CHALLENGES</h2>
+             <p>- Decidophobia, Dilemma of selecting an option</p>
+              <p>- Not having a clarity on the cost of the service</p>
+              <p>- How skilled is this service provider?</p>
+              <p>- How many events have they done in past?</p>
+              <p>- What is the track record of this service provider?</p>
+              <p>- How to get in touch with the right service provider?</p>
+          </div>
+          <div class="col-md-6">
+            <h2> <img src="/assets/images/projects/event-management/em8.png" />NEEDS</h2>
+            <p>- Shortlisted set of services that match your budget and spl. occasion</p>
+            <p>- Break down of the total cost for the service</p>
+            <p>- Similar works, Testimonials, Videos</p>
+            <p>- Team members, Portfolio </p>
+            <p>- Contact inline, Request call via phone</p>
+          </div>
+      </div>
+      </div>
+    </div>
+    <div class="strategy">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-5">
+            <h5>Our strategy</h5>
+            <p>Business segments like Hotel Management, Wedding Halls, Decorators, Photographers, Make-up Artists, Fashion Designers lean more and more into social media (Instagram & Facebook) to showcase their professional services.</p>
+          </div>
+          <div class="col-md-1"></div>
+          <div class="col-md-6">
+            <div class="row">
+            <div class="col-md-6">
+            <div class="shadow p-3 mb-5 bg-white rounded">
+              <div class="row">
+                <div class="col-md-8">
+                  <h3>25 %</h3>
+                  <h4>Client Retention</h4>
+                </div>
+                <div class="col-md-2">
+                  <img src="/assets/images/projects/event-management/img-1.svg" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="shadow p-3 mb-5 bg-white rounded">
+              <div class="row">
+                <div class="col-md-8">
+              <h3>25 %</h3>
+              <h4>Web Communication</h4>
+            </div>
+            <div class="col-md-2">
+              <img src="/assets/images/projects/event-management/img-2.svg" />
+            </div>
+            </div>
+          </div>
+          </div>
+          <div class="col-md-6">
+            <div class="shadow p-3 mb-5 bg-white rounded">
+              <div class="row">
+                <div class="col-md-8">
+              <h3>25 %</h3>
+              <h4>New Customer</h4>
+            </div>
+            <div class="col-md-2">
+              <img src="/assets/images/projects/event-management/img-3.svg" />
+            </div>
+            </div>
+            </div>
+          </div>
+        </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="layout3">
       <div class="container">
       <div class="row">
@@ -169,29 +300,6 @@
       </div>
       </div>
       </div>
-    <div class="layout5">
-      <div class="container">
-      <div class="row">
-          <div class="col-md-6">
-             <h2> <img src="/assets/images/projects/event-management/em8.png" />CHALLENGES</h2>
-             <p>- Decidophobia, Dilemma of selecting an option</p>
-              <p>- Not having a clarity on the cost of the service</p>
-              <p>- How skilled is this service provider?</p>
-              <p>- How many events have they done in past?</p>
-              <p>- What is the track record of this service provider?</p>
-              <p>- How to get in touch with the right service provider?</p>
-          </div>
-          <div class="col-md-6">
-            <h2> <img src="/assets/images/projects/event-management/em8.png" />NEEDS</h2>
-            <p>- Shortlisted set of services that match your budget and spl. occasion</p>
-            <p>- Break down of the total cost for the service</p>
-            <p>- Similar works, Testimonials, Videos</p>
-            <p>- Team members, Portfolio </p>
-            <p>- Contact inline, Request call via phone</p>
-          </div>
-      </div>
-      </div>
-    </div>
     <div class="layout6">
       <div class="container">
         <div class="row">
