--- a/src/app/components/projects/health/health.component.scss
+++ b/src/app/components/projects/health/health.component.scss
@@ -5,8 +5,8 @@
 
 /* Health Buy */
 .health-buy{
-    background-color: #52BC67;
-    color: #ffffff;
+    //background-color: #52BC67;
+    //color: #ffffff;
     h1{
         padding-top: 150px;
         font-size: 50px;
