--- a/src/app/components/projects/networking/networking.component.html
+++ b/src/app/components/projects/networking/networking.component.html
@@ -1,22 +1,28 @@
 <section class="networking">
+  <div class="container">
+    <div class="heading">
+    <div class="row">
+      <div class="col-md-5">
+        <h1>NETWORK</h1>
+        <h2>SCALABILITY</h2>
+        <p>Digital Transformation for India's largest telecom network service provider involved redesigning 
+          the experience for customers, SMEs and business users. It involved breaking down complex manual process 
+          of quote, billing & invoicing that spanned across multiple platforms and CRM systems with high level of 
+          scalability & seamless customer experience.</p>
+      </div>
+      <div class="col-md-5">
+        <div class="step-image">
+          <img src="/assets/images/projects/networking/nm1.png" alt="Digital Transformation of Networing Platform"/>
+      </div>
+      </div>
+    </div>
+  </div>
+  </div>
         <div class="layout1">
           <div class="container">
-            <div class="row">
-              <div class="col-md-5">
-                <h1>NETWORK</h1>
-                <h2>SCALABILITY</h2>
-                <p>Digital Transformation for India's largest telecom network service provider involved redesigning 
-                  the experience for customers, SMEs and business users. It involved breaking down complex manual process 
-                  of quote, billing & invoicing that spanned across multiple platforms and CRM systems with high level of 
-                  scalability & seamless customer experience.</p>
-              </div>
-              <div class="col-md-5">
-                <div class="step-image">
-                  <img src="/assets/images/projects/networking/nm1.png" alt="Digital Transformation of Networing Platform"/>
-              </div>
-              </div>
-            </div>
-            <div class="row about-project">
+            <section class="about-project">
+              <div class="container">
+              <div class="row">
               <div class="col-md-6">
                 <h2>ABOUT PROJECT</h2>
               </div>
@@ -35,6 +41,142 @@
                   <h5>B2B</h5>
                 </div>
               </div>
+              </div>
+            </div>
+          </div>
+            </section>
+            <div class="existing">
+              <!-- <div class="container"> -->
+                <div class="row">
+                  <div class="col-md-5">
+                    <h5>Existing Business</h5>
+                    <p>Business segments like Hotel Management, Wedding Halls, Decorators, Photographers, Make-up Artists, Fashion Designers lean more and more into social media (Instagram & Facebook) to showcase their professional services.</p>
+                  </div>
+                  <div class="col-md-1"></div>
+                  <div class="col-md-6">
+                    <div class="row">
+                    <div class="col-md-6">
+                    <div class="shadow p-3 mb-5 bg-white rounded">
+                      <div class="row">
+                        <div class="col-md-8">
+                          <h3>25 %</h3>
+                          <h4>Client Retention</h4>
+                        </div>
+                        <div class="col-md-2">
+                          <img src="/assets/images/projects/networking/img-1.svg" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="shadow p-3 mb-5 bg-white rounded">
+                      <div class="row">
+                        <div class="col-md-8">
+                      <h3>25 %</h3>
+                      <h4>Web Communication</h4>
+                    </div>
+                    <div class="col-md-2">
+                      <img src="/assets/images/projects/networking/img-2.svg" />
+                    </div>
+                    </div>
+                  </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="shadow p-3 mb-5 bg-white rounded">
+                      <div class="row">
+                        <div class="col-md-8">
+                      <h3>25 %</h3>
+                      <h4>New Customer</h4>
+                    </div>
+                    <div class="col-md-2">
+                      <img src="/assets/images/projects/networking/img-3.svg" />
+                    </div>
+                    </div>
+                    </div>
+                  </div>
+                </div>
+                  </div>
+                </div>
+              <!-- </div> -->
+            </div>
+            <div class="layout2">
+              <!-- <div class="container"> -->
+                <div class="row">
+                  <div class="col-md-6">
+                    <h2>CHALLENGES</h2>
+                    <!-- <img src="/assets/images/projects/networking/nm10.png" /> -->
+                    <p></p>
+                    <p>- Heavy dependency on Support Team</p>
+                    <p>- Delay in communication</p>
+                    <p>- Outstanding customer payments</p>
+                    <p>- Avoiding cheque payments</p>
+                    <p>- Multiple follow-ups to customers on purchase and billing</p>
+                  </div>
+                  <div class="col-md-6">
+                    <h2>NEEDS</h2>
+                    <!-- <img src="/assets/images/projects/networking/nm10.png" /> -->
+                    <p>- Promoting online and on-time payment of invoices</p>
+                    <p>- Converting existing offline users to online process</p>
+                    <p>- Reducing the manual intervention</p>
+                    <p>- Avoiding delays in status intimation</p>
+                    <p>- Improving customer retention</p>
+                     
+                  </div>
+                </div>
+              <!-- </div> -->
+            </div>
+            <div class="strategy">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-5">
+                    <h5>Our strategy</h5>
+                    <p>Business segments like Hotel Management, Wedding Halls, Decorators, Photographers, Make-up Artists, Fashion Designers lean more and more into social media (Instagram & Facebook) to showcase their professional services.</p>
+                  </div>
+                  <div class="col-md-1"></div>
+                  <div class="col-md-6">
+                    <div class="row">
+                    <div class="col-md-6">
+                    <div class="shadow p-3 mb-5 bg-white rounded">
+                      <div class="row">
+                        <div class="col-md-8">
+                          <h3>25 %</h3>
+                          <h4>Client Retention</h4>
+                        </div>
+                        <div class="col-md-2">
+                          <img src="/assets/images/projects/networking/img-1.svg" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="shadow p-3 mb-5 bg-white rounded">
+                      <div class="row">
+                        <div class="col-md-8">
+                      <h3>25 %</h3>
+                      <h4>Web Communication</h4>
+                    </div>
+                    <div class="col-md-2">
+                      <img src="/assets/images/projects/networking/img-2.svg" />
+                    </div>
+                    </div>
+                  </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="shadow p-3 mb-5 bg-white rounded">
+                      <div class="row">
+                        <div class="col-md-8">
+                      <h3>25 %</h3>
+                      <h4>New Customer</h4>
+                    </div>
+                    <div class="col-md-2">
+                      <img src="/assets/images/projects/networking/img-3.svg" />
+                    </div>
+                    </div>
+                    </div>
+                  </div>
+                </div>
+                  </div>
+                </div>
               </div>
             </div>
              <h2>DESIGN PROCESS</h2>
@@ -218,8 +360,8 @@
           </div>
             </div>
            </div>
-        </div>
-        <div class="layout2">
+       
+        <!-- <div class="layout2">
           <div class="container">
             <div class="row">
               <div class="col-md-6">
@@ -242,7 +384,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="layout3">
           <div class="container">
             <div class="row">
@@ -275,6 +417,7 @@
             </div>
           </div>
         </div>
+      </div>
         <div class="layout4">
           <div class="container">
             <div class="row">
