--- a/src/app/components/projects/skill-development/skill-development.component.scss
+++ b/src/app/components/projects/skill-development/skill-development.component.scss
@@ -5,10 +5,10 @@
 
 /* Skill Development */
 .skill-dev{
-    background-color: #DF3F6F;
+    //background-color: #DF3F6F;
     .heading{
         padding-top: 150px;
-        color: #ffffff;
+        //color: #ffffff;
         h1{
             font-size: 50px;
             font-weight: 300;
