--- a/src/app/components/projects/event-management/event-management.component.scss
+++ b/src/app/components/projects/event-management/event-management.component.scss
@@ -114,6 +114,131 @@ p{
 }
 }
 
+.existing{
+    padding-top: 30px;
+    margin-bottom: 100px;
+    .row{
+        margin-bottom: 0;
+    }
+    .col-md-8{
+        padding-right: 0;
+    }
+    h5{
+        font-size: 24px;
+        font-weight: 300;
+    }
+    p{
+        font-size: 14px;
+        font-weight: 300;
+        color: #575757;
+        margin-top: 20px;
+        text-align: justify;
+    }
+    h3{
+        font-size: 47px;
+        font-weight: 300;
+    }
+    h4{
+        font-size: 16px;
+        font-weight: 300;
+    }
+    img{
+        margin-top: 30px;
+    }
+}
+@include media-breakpoint-down(md) {
+    .existing{
+        padding-top: 40px;
+        margin-bottom: 30px;
+    h5{
+        font-size: 17px;
+    }
+    p{
+        font-size: 13px;
+        margin-top: 10px;
+    }
+    h3{
+        font-size: 28px;
+    }
+    h4{
+        font-size: 14px;
+    }
+    img{
+        margin-top: 20px;
+    }
+    .col-md-8{
+        width: 70%;
+    }
+    .col-md-2{
+        width: 30%;
+    }
+}
+}
+
+.strategy{
+    padding-top: 100px;
+    padding-bottom: 50px;
+    margin-bottom: 50px;
+    background-color: #FFF7F7;
+    .row{
+        margin-bottom: 0;
+    }
+    .col-md-8{
+        padding-right: 0;
+    }
+    h5{
+        font-size: 24px;
+        font-weight: 300;
+    }
+    p{
+        font-size: 14px;
+        font-weight: 300;
+        color: #575757;
+        margin-top: 20px;
+        text-align: justify;
+    }
+    h3{
+        font-size: 47px;
+        font-weight: 300;
+    }
+    h4{
+        font-size: 16px;
+        font-weight: 300;
+    }
+    img{
+        margin-top: 30px;
+    }
+}
+@include media-breakpoint-down(md) {
+    .strategy{
+        padding-top: 50px;
+        padding-bottom: 20px;
+        margin-bottom: 0px;
+    h5{
+        font-size: 17px;
+    }
+    p{
+        font-size: 13px;
+        margin-top: 10px;
+    }
+    h3{
+        font-size: 28px;
+    }
+    h4{
+        font-size: 14px;
+    }
+    img{
+        margin-top: 20px;
+    }
+    .col-md-8{
+        width: 70%;
+    }
+    .col-md-2{
+        width: 30%;
+    }
+}
+}
+
 .layout3{
     .row{
         margin-bottom: 100px;
