--- a/src/app/components/projects/health-care/health-care.component.scss
+++ b/src/app/components/projects/health-care/health-care.component.scss
@@ -62,6 +62,177 @@
     }
 }
 
+/* Existing Business */
+.existing{
+    padding-top: 60px;
+    margin-bottom: 100px;
+    .row{
+        margin-bottom: 0;
+    }
+    .col-md-8{
+        padding-right: 0;
+    }
+    h5{
+        font-size: 24px;
+        font-weight: 300;
+    }
+    p{
+        font-size: 14px;
+        font-weight: 300;
+        color: #575757;
+        margin-top: 20px;
+        text-align: justify;
+    }
+    h3{
+        font-size: 47px;
+        font-weight: 300;
+    }
+    h4{
+        font-size: 16px;
+        font-weight: 300;
+    }
+    img{
+        margin-top: 30px;
+    }
+}
+@include media-breakpoint-down(md) {
+    .existing{
+        padding-top: 20px;
+        margin-bottom: 30px;
+    h5{
+        font-size: 17px;
+    }
+    p{
+        font-size: 13px;
+        margin-top: 10px;
+    }
+    h3{
+        font-size: 28px;
+    }
+    h4{
+        font-size: 14px;
+    }
+    img{
+        margin-top: 20px;
+    }
+    .col-md-8{
+        width: 70%;
+    }
+    .col-md-2{
+        width: 30%;
+    }
+}
+}
+
+
+/* Our Strategy */
+.strategy{
+    padding-top: 100px;
+    margin-bottom: 50px;
+    .row{
+        margin-bottom: 0;
+    }
+    .col-md-8{
+        padding-right: 0;
+    }
+    h5{
+        font-size: 24px;
+        font-weight: 300;
+    }
+    p{
+        font-size: 14px;
+        font-weight: 300;
+        color: #575757;
+        margin-top: 20px;
+        text-align: justify;
+    }
+    h3{
+        font-size: 47px;
+        font-weight: 300;
+    }
+    h4{
+        font-size: 16px;
+        font-weight: 300;
+    }
+    img{
+        margin-top: 30px;
+    }
+}
+@include media-breakpoint-down(md) {
+    .strategy{
+        padding-top: 50px;
+        padding-bottom: 20px;
+        margin-bottom: 0px;
+    h5{
+        font-size: 17px;
+    }
+    p{
+        font-size: 13px;
+        margin-top: 10px;
+    }
+    h3{
+        font-size: 28px;
+    }
+    h4{
+        font-size: 14px;
+    }
+    img{
+        margin-top: 20px;
+    }
+    .col-md-8{
+        width: 70%;
+    }
+    .col-md-2{
+        width: 30%;
+    }
+}
+}
+
+/* Challenges & Needs */
+.layout5{
+    background-color: #E0F0FA;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    h2{
+        font-size: 40px;
+        font-weight: 300;
+        //color: #FFFFFF;
+        text-align: left;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    p{
+        font-size: 14px;
+        //color: #FFFFFF;
+        font-weight: 300;
+        text-align: justify;
+        margin-bottom: 5px;
+    }
+    .row{
+        margin-bottom: 0px;
+    }
+    img{
+        margin-right: 5px;
+        margin-top: -5px;
+    }
+}
+
+@include media-breakpoint-down(md) {
+.layout5{
+        padding-top: 40px;
+        padding-bottom: 60px;
+        h2{
+            font-size: 25px;
+            padding-top: 30px;
+            padding-bottom: 10px;
+        }
+        p{
+            font-size: 13px;
+            margin-bottom: 10px;
+        }
+    }
+}
+
 /* Research */
 .research{
     padding-bottom: 30px;
