--- a/src/app/components/projects/networking/networking.component.scss
+++ b/src/app/components/projects/networking/networking.component.scss
@@ -17,7 +17,30 @@
         }
     }
 }
-
+.heading{
+    h1{
+        font-size: 50px;
+        font-weight: 300;
+        margin-top: 167px;
+        text-align: left;
+    }
+    h2{
+        font-size: 40px;
+        font-weight: 300;
+        text-align: left;
+        margin-bottom: 30px;
+    }
+    p{
+        font-size: 14px;
+        font-weight: 300;
+        text-align: justify;
+    }
+    .step-image img{
+        padding-top: 100px;
+        width: 150%;
+        height: auto;
+    }
+}
 .layout1{
     background-image: linear-gradient(#727476, #232323);
     h2{
@@ -54,11 +77,6 @@
         font-weight: 300;
         text-align: justify;
     }
-    .step-image img{
-        padding-top: 100px;
-        width: 150%;
-        height: auto;
-    }
 
 @include media-breakpoint-down(md) {
     h2{
@@ -87,6 +105,7 @@
 }
 
 .about-project{
+        margin-top: -20px;
         background-color: #242424;
         h2{
             font-size: 40px;
@@ -140,6 +159,140 @@
     }
     h5{
         font-size: 13px;
+    }
+}
+}
+
+.existing{
+    padding-top: 60px;
+    margin-bottom: 100px;
+    .row{
+        margin-bottom: 0;
+    }
+    .col-md-8{
+        padding-right: 0;
+    }
+    h5{
+        font-size: 24px;
+        font-weight: 300;
+    }
+    p{
+        font-size: 14px;
+        font-weight: 300;
+        margin-top: 20px;
+        text-align: justify;
+    }
+    h3{
+        font-size: 47px;
+        font-weight: 300;
+        color: #B9D32C;
+        margin-bottom: 10px;
+    }
+    h4{
+        font-size: 16px;
+        font-weight: 300;
+        color: #ffffff;
+    }
+    .shadow{
+        background-color: #434446;
+    }
+    img{
+        margin-top: 30px;
+    }
+}
+@include media-breakpoint-down(md) {
+    .existing{
+        padding-top: 20px;
+        margin-bottom: 30px;
+    h5{
+        font-size: 17px;
+    }
+    p{
+        font-size: 13px;
+        margin-top: 10px;
+    }
+    h3{
+        font-size: 28px;
+    }
+    h4{
+        font-size: 14px;
+    }
+    img{
+        margin-top: 20px;
+    }
+    .col-md-8{
+        width: 70%;
+    }
+    .col-md-2{
+        width: 30%;
+    }
+}
+}
+
+.strategy{
+    padding-top: 100px;
+    margin-bottom: 50px;
+    background-color: #383839;
+    .row{
+        margin-bottom: 0;
+    }
+    .col-md-8{
+        padding-right: 0;
+    }
+    h5{
+        font-size: 24px;
+        font-weight: 300;
+    }
+    p{
+        font-size: 14px;
+        font-weight: 300;
+        margin-top: 20px;
+        text-align: justify;
+    }
+    h3{
+        font-size: 47px;
+        font-weight: 300;
+        color: #B9D32C;
+        margin-bottom: 10px;
+    }
+    h4{
+        font-size: 16px;
+        font-weight: 300;
+        color: #FFFFFF;
+    }
+    .shadow{
+        background-color: #434446;
+    }
+    img{
+        margin-top: 30px;
+    }
+}
+@include media-breakpoint-down(md) {
+    .strategy{
+        padding-top: 50px;
+        padding-bottom: 20px;
+        margin-bottom: 40px;
+    h5{
+        font-size: 17px;
+    }
+    p{
+        font-size: 13px;
+        margin-top: 10px;
+    }
+    h3{
+        font-size: 28px;
+    }
+    h4{
+        font-size: 14px;
+    }
+    img{
+        margin-top: 20px;
+    }
+    .col-md-8{
+        width: 70%;
+    }
+    .col-md-2{
+        width: 30%;
     }
 }
 }
@@ -280,6 +433,9 @@
 }
 
 .quality{
+    .row{
+        margin-bottom: 0px;
+    }
         span{
             font-weight: bold;
         }
@@ -379,17 +535,16 @@
 }
 
 .layout2{
-    background-color: #9D9D9D;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    margin-top: -180px;
+    //background-color: #9D9D9D;
+    //padding-top: 60px;
+    padding-bottom: 80px;
+    margin-top: -50px;
     h2{
         font-size: 40px;
         font-weight: 300;
         //color: #393939;
         text-align: left;
         padding-top: 20px;
-        padding-bottom: 20px;
     }
     p{
         font-size: 14px;
@@ -404,6 +559,7 @@
     img{
         margin-right: 5px;
         margin-top: -5px;
+        color: #FFFFFF;
     }
 }
 
@@ -415,7 +571,7 @@
     h2{
         font-size: 25px;
         padding-top: 20px;
-        padding-bottom: 10px;
+        margin-bottom: 10px;
     }
     p{
         font-size: 13px;
@@ -425,9 +581,11 @@
 }
 
 .layout3{
+    padding-top: 50px;
+    padding-bottom: 50px;
     background-color: #232323;
     .row{
-        margin-bottom: 30px;
+        margin-bottom: 0px;
     }
     .col-md-3{
         margin-bottom: 50px;
