--- a/src/app/components/cater/cater.component.html
+++ b/src/app/components/cater/cater.component.html
@@ -3,9 +3,6 @@
       <div class="row">
             <div class="col-md-6">
                   <h1>We cater to your needs</h1>
-                  <p>We believe ressearch brings our team of design experts connect with your business
-                        and 'dev team to build a better product
-                  </p>
             </div>
             <div class="col-md-1"></div>
             <div class="col-md-1">
@@ -35,8 +32,8 @@
             </div>
             <div class="row">
                   <div class="col-md-5">
-                        <h2>HOW DIGITAL TRANSFORMATION</h2>
-                        <h2>IS IMPORTANT TO BUSINESS?</h2>
+                        <h2>How Digital Transformation
+                        can aid business?</h2>
                         <p>A digital transformation strategy can immensely help transform the business, streamline process 
                               with the use of latest technologies to enhance customer experience and delivery better 
                               productivity. The concern for many businesses can be, Are we too late to begin now? 
@@ -47,8 +44,7 @@
                   </div>
                   <div class="col-md-1"></div>
                   <div class="col-md-5">
-                        <h2>ADVANTAGES OF DIGITAL</h2>
-                        <h2>TRANSFORMATION</h2>
+                        <h2>Advantages of Digital Transformation</h2>
                         <ul class="list">
                               <li><p>Achieve customer adoption of digital customer journeys</p></li>
                               <li><p>Design and digitise customer journeys</p></li>
@@ -67,8 +63,7 @@
                   </div>
                   <div class="col-md-1"></div>
                   <div class="col-md-5">
-                        <h2>DIGITAL TRANSFORMATION</h2>
-                        <h2>SERVICES</h2>
+                        <h2>Digital Transformation Services</h2>
                         <p>Accelerate the shift to digital with our design driven strategy with clarity and sprint based 
                               approach. Our structured approach helps clients accelerate their digital adoption rate at the 
                               same pace they see business change happening all around them. We priorities initiatives that 
@@ -92,14 +87,14 @@
             </div>
             <div class="row">
                   <div class="col-md-5">
-                        <h2>PRODUCT DEVELOPMENT STRATEGY</h2>
+                        <h2>Product Development Strategy</h2>
                         <p>The key for a Product Development is understand the market, deep Research brings key Insights for 
                               product development. Urban & Hauser outline a range of new product development strategies 
                               companies should consider. They are classified as Reactive or Proactive, depending on how a 
                               company handles pressures from the market and how it decides to use external and internal sources 
                               of product development.
                         </p>
-                        <h2>PRODUCT DEVELOPMENT PROCESS</h2>
+                        <h2>Product Development Process</h2>
                         <ul class="list">
                               <li><p>Selecting the Target Group</p></li>
                               <li><p>Conducting Market Research</p></li>
@@ -131,7 +126,7 @@
             </div>
             <div class="row">
                   <div class="col-md-5">
-                        <h2>DESIGNING THE MVP</h2>
+                        <h2>Designing the MVP</h2>
                         <p>The process starts with understanding the mission and the bigger vision and set the pitch. The 
                               requirement gathering happens in a series of iteration for better refinement and alignment of 
                               goals and realistic road map.
@@ -146,7 +141,7 @@
                   </div>
                   <div class="col-md-1"></div>
                   <div class="col-md-5">
-                        <h2>SETUP BUSINESS STRATEGY</h2>
+                        <h2>Set-up Business Strategy</h2>
                         <p>With the overall road map defined we convert the drawing board ideas to realistic Business Strategy and collaborate with the 
                               Product Owners to priorities and assign timeline. Analyse the ROI and align the features for the road map ahead.
                         </p>
@@ -154,7 +149,7 @@
             </div>
             <div class="row">
                   <div class="col-md-5">
-                        <h2>DESIGN SPRINTS</h2>
+                        <h2>Design Sprints</h2>
                         <p>Design Sprints have been used by product leaders in companies like Uber, Slack, Google and Twitter 
                               to solve problems and build better products. It is an ultimate tool for 
                         </p>
@@ -197,7 +192,7 @@
             </div>
             <div class="row">
                   <div class="col-md-5">
-                        <h2>NEW ERA</h2>
+                        <h2>New Era</h2>
                         <p>We believe ressearch brings our team of design experts connect with your business
                               and 'dev team to build a better product We believe ressearch brings our team of 
                               design experts connect with your business and 'dev team to build a better product
@@ -307,37 +302,38 @@
                         <div class="step-image">
                               <img src="/assets/images/cater/process-1.svg" alt="" />
                         </div>
-                        <h2>RESEARCH</h2>
-                        <p>We believe ressearch brings our team</p>
+                        <h2>Research</h2>
+                        
                   </div>
                   <div class="col-md-2">
                         <div class="step-image">
                               <img src="/assets/images/cater/process-2.svg" alt="" />
                         </div>
-                        <h2>DEFINE</h2>
-                        <p>We believe ressearch brings our team</p>
+                        <h2>Define</h2>
+                      
                   </div>
                   <div class="col-md-2">
                         <div class="step-image">
                               <img src="/assets/images/cater/process-3.svg" alt="" />
                         </div>
-                        <h2>STRATEGY</h2>
-                        <p>We believe ressearch brings our team</p>
+                        <h2>Strategies</h2>
+                       
                   </div>
                   <div class="col-md-2">
                         <div class="step-image">
                               <img src="/assets/images/cater/process-4.svg" alt="" />
                         </div>
-                        <h2>DESIGN</h2>
-                        <p>We believe ressearch brings our team</p>
+                        <h2>Design</h2>
+                       
                   </div>
                   <div class="col-md-2">
                         <div class="step-image">
                               <img src="/assets/images/cater/process-5.svg" alt="" />
                         </div>
-                        <h2>ITERATE</h2>
-                        <p>We believe ressearch brings our team</p>
+                        <h2>Test & Iterate</h2>
+                       
                   </div>
+                  
                   <div class="col-md-1"></div>
             </div>
             <div class="row bttn">
