--- a/src/app/components/projects/networking/networking.component.scss
+++ b/src/app/components/projects/networking/networking.component.scss
@@ -42,6 +42,7 @@
     }
 }
 .layout1{
+    padding-top: 50px;
     background-image: linear-gradient(#727476, #232323);
     h2{
         font-size: 40px;
@@ -105,7 +106,7 @@
 }
 
 .about-project{
-        margin-top: -20px;
+        //margin-top: -20px;
         background-color: #242424;
         h2{
             font-size: 40px;
