--- a/src/app/components/cater/cater.component.html
+++ b/src/app/components/cater/cater.component.html
@@ -121,7 +121,7 @@
       <div class="container">
             <div class="row">
                   <div class="col-md-12">
-                        <h1>STARTUPS</h1>
+                        <h1>START-UPS</h1>
                   </div>
             </div>
             <div class="row">
@@ -193,17 +193,16 @@
             <div class="row">
                   <div class="col-md-5">
                         <h2>New Era</h2>
-                        <p>We believe ressearch brings our team of design experts connect with your business
-                              and 'dev team to build a better product We believe ressearch brings our team of 
-                              design experts connect with your business and 'dev team to build a better product
+                        <p>With the need for constant updates and customer interaction the demand for mobile apps have increased multifold. 
+                              Aligning with the Native Ecosystem is the key to design for Android & iOS which helps in easier adaptability. 
+                              Our designers can churn the right features and engagement with the best of customer experience.
                         </p>
                   </div>
                   <div class="col-md-1"></div>
                   <div class="col-md-5">
                         <h2>INCREASE YOUR BUSINESS SALES</h2>
-                        <p>We believe ressearch brings our team of design experts connect with your business
-                              and 'dev team to build a better product We believe ressearch brings our team of 
-                              design experts connect with your business and 'dev team to build a better product
+                        <p>Mobile Apps have the potential to increase the business productivity multifold by being in the field.
+                              Helps your product to reach masses and plays a critical role for reaching the customers.
                         </p>
                   </div>
             </div>
@@ -216,9 +215,9 @@
                   <div class="col-md-1"></div>
                   <div class="col-md-5">
                         <h2>B2B & B2C</h2>
-                        <p>We believe ressearch brings our team of design experts connect with your business
-                              and 'dev team to build a better product We believe ressearch brings our team of 
-                              design experts connect with your business and 'dev team to build a better product
+                        <p>Out of sight is out of mind for certain categories of tasks, if your business tasks falls under that
+                               critical region be that your business falls under B2B or B2C mobile apps leverage of 
+                               serving the customer spontaniously with continuity and enhanced productivity.
                         </p>
                   </div>
             </div>
@@ -229,22 +228,24 @@
       <div class="container">
             <div class="row">
                   <div class="col-md-12">
-                        <h1>ENTERPRICE APPLICATION</h1>
+                        <h1>ENTERPRISE APPLICATION</h1>
                   </div>
             </div>
             <div class="row">
                   <div class="col-md-5">
-                        <h2>PRODUCT DEVELOPMENT STRATEGY</h2>
-                        <p>We believe ressearch brings our team of design experts connect with your business
-                              and 'dev team to build a better product We believe ressearch brings our team of 
-                              design experts connect with your business and 'dev team to build a better product
+                        <h2>Strategies Feature Map</h2>
+                        <p>Prioritising the road map with the key features involved is the key for designing Enterprise Applications. It 
+                              involves closely working with the internal business and product teams; aligning the mission and vision with 
+                              the key Stakeholders of the business. Our consultants work as a true extension of the internal teams to bring 
+                              the key changes required in designing the application which acts as the backbone of the Core Business.   
                         </p>
-                        <h2>PRODUCT DEVELOPMENT PROCESS</h2>
+                        <h2>The Design Process</h2>
                         <ul class="list">
-                              <li><p>We believe ressearch brings our team of design</p></li>
-                              <li><p>We believe ressearch brings our team of design</p></li>
-                              <li><p>We believe ressearch brings our team of design</p></li>
-                              <li><p>We believe ressearch brings our team of design</p></li>
+                              <li><p>Deep dive to understand the Business Domain</p></li>
+                              <li><p>Breakdown the complexities</p></li>
+                              <li><p>Build the key component wireframes</p></li>
+                              <li><p>Iterate with end users and businesss</p></li>
+                              <li><p>Finalise the clickable prototype for development</p></li>
                         </ul>
                   </div>
                   <div class="col-md-1"></div>
@@ -266,17 +267,19 @@
             </div>
             <div class="row">
                   <div class="col-md-5">
-                        <h2>PRODUCT DEVELOPMENT STRATEGY</h2>
-                        <p>We believe ressearch brings our team of design experts connect with your business
-                              and 'dev team to build a better product We believe ressearch brings our team of 
-                              design experts connect with your business and 'dev team to build a better product
+                        <h2>Requirement Gathering</h2>
+                        <p>We discuss with the stakeholders to set the pitch and get the inputs of target audience to focus on customer engagement 
+                              and conversion.
                         </p>
-                        <h2>PRODUCT DEVELOPMENT PROCESS</h2>
+                        <h2>The Design Process</h2>
                         <ul class="list">
-                              <li><p>We believe ressearch brings our team of design</p></li>
-                              <li><p>We believe ressearch brings our team of design</p></li>
-                              <li><p>We believe ressearch brings our team of design</p></li>
-                              <li><p>We believe ressearch brings our team of design</p></li>
+                              <li><p>Existing portal analytics</p></li>
+                              <li><p>Competitor Analysis</p></li>
+                              <li><p>Key conversion factors</p></li>
+                              <li><p>Content Strategy</p></li>
+                              <li><p>High Level Sketches</p></li>
+                              <li><p>Refinement Iteration</p></li>
+                              <li><p>Tested & Iterated Web Design</p></li>
                         </ul>
                   </div>
                   <div class="col-md-1"></div>
