--- a/src/app/components/cater/cater.component.html
+++ b/src/app/components/cater/cater.component.html
@@ -277,6 +277,7 @@
                               <li><p>Competitor Analysis</p></li>
                               <li><p>Key conversion factors</p></li>
                               <li><p>Content Strategy</p></li>
+                              <li><p>Navigation Model</p></li>
                               <li><p>High Level Sketches</p></li>
                               <li><p>Refinement Iteration</p></li>
                               <li><p>Tested & Iterated Web Design</p></li>
